# project-boilerplate

./: .env.example  AGENTS.md  Makefile  docker-compose.yml
.agent/agents/: backend-specialist.md  debugger.md  frontend-specialist.md  (+2 more)
.githooks/: pre-commit
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  c4e74ec4736e_initial_user_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/application/dtos/: __init__.py  user.py
backend/app/application/use_cases/auth/: __init__.py  get_profile.py  login.py  register.py  update_profile.py
backend/app/application/use_cases/uploads/: __init__.py  presign_upload.py  upload_file.py
backend/app/core/: datetime_utils.py  jwt.py  security.py
backend/app/domain/entities/: user.py
backend/app/domain/exceptions/: __init__.py  exceptions.py
backend/app/domain/interfaces/: __init__.py  s3_client.py  user_repo.py
backend/app/infrastructure/: database.py
backend/app/infrastructure/clients/: s3_client.py
backend/app/infrastructure/di/: clients.py  database.py  repositories.py  setup.py  use_cases.py
backend/app/infrastructure/persistence/models/: user.py
backend/app/infrastructure/repositories/: users.py
backend/app/presentation/api/: __init__.py  deps.py  exceptions.py
backend/app/presentation/api/routers/: __init__.py  auth.py  me.py  uploads.py
backend/tests/: conftest.py  test_auth.py  test_uploads.py
web/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+44 files in other folders)
