[project]
name = "backend-boilerplate"
version = "0.1.0"
description = "FastAPI backend boilerplate with Clean Architecture, DDD, Dishka, PostgreSQL, and S3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "boto3>=1.35.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "loguru>=0.7.3",
    "dishka>=1.4.0",
    "greenlet>=3.0",
    "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]
